Fixed navbar so that on mobile devices it is at full width

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   overflow-x : hidden; 
   overflow-y: hidden;
   display:flex;
-  width: 80%;
+  
   margin: 0 auto;
   justify-content: center;
   min-height: 100vh;
